# CppUTestTemplate

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CppUTestExample.cpp  Jenkinsfile  LICENSE.md  README.md  cpputest_FirstTestGroup.xml  makefile  release-please-config.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
Interface/: Example.h  ExampleC.h  ExampleCpp.h
Source/: CMakeLists.txt  Example.c  Example.cpp  ExampleC.c  ExampleCpp.cpp
Tests/: CMakeLists.txt  CppUTestExample.cpp  ExampleCTests.cpp  ExampleCppTests.cpp  run_junit.cmake
docs/: builds.md  ci.md  cloning-template.md  containers.md  template-updates.md
scripts/: init-component.sh
